objects/JBCXM__AutomatedAlertRules__c.object
<CustomObject>
    <description>This is used to store Automated alert rules.</description>
    <fields>
        <fullName>JBCXM__AdvanceCriteria__c</fullName>
        <label>Advance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__AlertCount__c</fullName>
        <description>It Stores the number of alerts created by rule.</description>
        <label>AlertCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__AlertCriteria__c</fullName>
        <description>This is used to store the parameters to create an alert.</description>
        <label>AlertCriteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <description>This is deprecated. Please do not use this field to store rule description.</description>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailCriteria__c</fullName>
        <label>EmailCriteria</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <description>This field stores if the rule is for Account or Relationship. Default value is Account</description>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastRuleUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the user who has last updated the rule from UI</description>
        <label>Last Rule Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LastRuleUpdatedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastRuleUpdatedDate__c</fullName>
        <description>This field stores the last time rule is updated from UI</description>
        <label>Last Rule Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastRunDate__c</fullName>
        <description>The last run date-time of the rule.</description>
        <label>LastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastRunResult__c</fullName>
        <label>LastRunResult</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextScheduledRun__c</fullName>
        <description>The next scheduled run date-time of the rule.</description>
        <label>NextScheduledRun</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__PlayBookIds__c</fullName>
        <label>PlaybookIds</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the relationship type if rule is for Relationship</description>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>GS Relationship Rules</relationshipLabel>
        <relationshipName>GSRelationshipRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RuleDescription__c</fullName>
        <description>Rule description is stored here.</description>
        <label>Rule Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RuleFlowInfo__c</fullName>
        <label>Rule Workflow Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScoreCardMetric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Metric</label>
        <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
        <relationshipLabel>Automated Alert Rules</relationshipLabel>
        <relationshipName>Automated_Alert_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScorecardCriteria__c</fullName>
        <label>ScorecardCriteria</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SelectFields__c</fullName>
        <label>Select Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceType__c</fullName>
        <description>It specifies the source of the rule. For example:Survey, Milestone,Usage, ...</description>
        <label>SourceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It specifies the rule is active or not</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskDefaultOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskDefaultOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Automated_Alert_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskOwnerField__c</fullName>
        <label>TaskOwnerField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TriggerCriteria__c</fullName>
        <description>This is used to store the Trigger criteria(Collection of rules) to create an alert.</description>
        <label>TriggerCriteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TriggeredUsageOn__c</fullName>
        <description>This is used to identify whether to evaluate an alert rule by Instance level, Account Level or Both in case of rule on usage(Adoption).</description>
        <label>Trigger Rule By Usage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__externalId__c</fullName>
        <externalId>true</externalId>
        <label>externalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__lastSuccessMillis__c</fullName>
        <label>lastSuccessMillis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ruleType__c</fullName>
        <label>ruleType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Automated Alert Rules</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__AlertCount__c</columns>
        <columns>JBCXM__AlertCriteria__c</columns>
        <columns>JBCXM__SourceType__c</columns>
        <columns>JBCXM__Status__c</columns>
        <columns>JBCXM__TriggerCriteria__c</columns>
        <columns>JBCXM__AdvanceCriteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RelatedId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Alert Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>